Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-44592

QVector::removeAll() does not remove elements

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.4.2, 5.5.0 Alpha
    • 5.4.0, 5.4.1
    • None
    • Linux 3.8.0-44-generic #66~precise1-Ubuntu SMP Tue Jul 15 04:04:23 UTC 2014 i686 i686 i386 GNU/Linux
    • 6716fe8cfdeb5f8cd63d6dde8252b25d86622404

      QVector::removeAll(), which is new in Qt 5.4.0, does not remove elements. In my case the vector was a container of QTcpSocket pointers. I would attempt to remove sockets as they were disconnected. But they were not removed.

      Changing the container to QList, with no other changes, worked. This behavior is limited to QVector.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            mmutz Marc Mutz
            brandybuck David Johnson
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes